--- a/style.css
+++ b/style.css
@@ -1,33 +1,46 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+header{
+    width: 1440px;
+    height: 93.17px;
+}
 body{
     background-color: #121139;
-    width: 1248px;
-    height: 553.56px;
+    width: 1440px;
+    height: 745.56px;
     display: flex;
+    flex-direction: column;
+}
+.body{
+    width: 1248px;
+    height: 745px;
+    
+    
 }
 .body.message{
-    display: flex;
     width: 663px;
-    height: 427px;
+    height: 740px;
     
 }
 h1{
     font-family: "Poppins", sans-serif;
+    font-size: 90px;
     text-align: center;
     flex-direction: column;
     width: 663px;
     height: 427px;
-    background: -webkit-linear-gradient(#F44E77, #812de2);
-    -webkit-text-fill-color: transparent;
+    background: linear-gradient(to right,#F44E77, #812de2);
+    background-size: cover;
     -webkit-background-clip: text;
-    
-
+    -webkit-text-fill-color: transparent;
 }
-
-
 .body-login{
-    width: 500px;
-    height: 250px;
-    border-radius: 50px;
     
+    width: 600px;
+    height: 300px;
+    color: rgb(29, 128, 215);
+    font-size: 39px;
+    background: linear-gradient(to right,#F44E77, #812de2);
+    background-size: cover;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
