--- a/style.css
+++ b/style.css
@@ -19,10 +19,10 @@ body{
     
 }
 .body-message{
-    width: 1440px;
+    width: 1600px;
     height: 740px;
     display: flex;
-    
+    justify-content: space-between;
 }
 h1{
     font-family: "Poppins", sans-serif;
@@ -38,12 +38,10 @@ h1{
     -webkit-text-fill-color: transparent;
 }
 h2{
+    
     font-family: "Poppins", sans-serif;
-    background: linear-gradient(to right,#50b6ff, #13599b ,#0f3d74);
-    text-decoration: line-through;
-    background-size: cover;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    text-align: center;
+    
 }
 .body-login{
     font-family: "Playfair Display", sans-serif;
@@ -53,6 +51,7 @@ h2{
     font-size: 50px;
     flex-direction: column; 
     
+    
 }
 .body-login-container{
     background: linear-gradient(to right, #13599b, #0f3d74, #1a2e54 );
@@ -60,6 +59,39 @@ h2{
     height: 100%;
 }
 input{
-    width: 300px;
+    width: 700px;
     height: 50px;
+    border-radius: 15px;
 }
+
+.body-login-container-inputext{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+}
+button{
+    width: 700px;
+    color: white;
+    background: linear-gradient(to right, #13599b, #0f3d74, #1a2e54 );
+}
+.body-login-container-alert{
+    width: 45px;
+    height: 25px;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    
+}
+.text{
+    width: 700px;
+    height: 21px;
+    display: flex;
+    flex-direction: column;
+    font-size: 15px;
+}
+p{
+    width: 700px;
+    height: 0px;
+}
+
