--- a/style.css
+++ b/style.css
@@ -76,22 +76,25 @@ button{
     background: linear-gradient(to right, #13599b, #0f3d74, #1a2e54 );
 }
 .body-login-container-alert{
-    width: 45px;
-    height: 25px;
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    
+    width: 35px;
+    height: 22px;
 }
 .text{
     width: 700px;
-    height: 21px;
+    height: 25px;
     display: flex;
-    flex-direction: column;
-    font-size: 15px;
+    font-size: 17px;
+}
+.text-immage{
+    display: flex;
+    height: 45px;
 }
 p{
-    width: 700px;
-    height: 0px;
+    width: 260px;
+    height: 25px;
+}
+h3{
+    height: 10px;
+    display: flex;
 }
 
