--- a/layout.css
+++ b/layout.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 *{
     margin: 0px;
     padding: 0%;
@@ -8,7 +9,18 @@
     width: 100%;
     height: 100%;
     justify-content: space-between;
-    background-color:#0F3D74;
+    
+    background-color:#13599b;
     color: white;
+}
+.bienvenida{
+    gap: 685px;
+    display: flex;
+    
+}
+p{
+    width: 476.88px;
+    font-size: 25px;
+    font-family: 'Oswald', sans-serif;
 }
 
