--- a/layout.css
+++ b/layout.css
@@ -9,17 +9,18 @@
     width: 100%;
     height: 100%;
     justify-content: space-between;
-    
     background-color:#13599b;
     color: white;
 }
 .bienvenida{
-    gap: 685px;
+    gap: 885px;
     display: flex;
-    
+}
+h1{
+    font-family: 'Oswald', sans-serif; 
 }
 p{
-    width: 476.88px;
+    width: 276.88px;
     font-size: 25px;
     font-family: 'Oswald', sans-serif;
 }
