--- a/layout.css
+++ b/layout.css
@@ -24,4 +24,43 @@ p{
     font-size: 25px;
     font-family: 'Oswald', sans-serif;
 }
+.container{
+    height: 400px;
+}
+.container-buttons{
+    gap: 200px;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background-color:#13599b;
+    justify-content:space-between ;
+}
+.button-one{
+    width: 300px;
+    font-size: 30px;
+    font-family: 'Oswald', sans-serif; 
+    color: white;
+    background: linear-gradient(to right, #13599b, #0f3d74, #1a2e54 );
+}
+.button-two{
+    width: 300px;
+    font-size: 30px;
+    font-family: 'Oswald', sans-serif; 
+    color: white;
+    background: linear-gradient(to right, #1a2e54, #0f3d74 );
+}
+.button-three{
+    width: 300px;
+    font-size: 30px;
+    font-family: 'Oswald', sans-serif; 
+    color: white;
+    background: linear-gradient(to right, #1a2e54, #0f3d74, #13599b );
+}
+.viewarea{
+    height: 200px;
+    background-color: #13599b;
+}
+.viewarea-container{
+    
+}
 
